--- a/lista1.ipynb
+++ b/lista1.ipynb
@@ -254,6 +254,7 @@
     "from urllib.error import HTTPError  # Importujemy wyjątek HTTPError\n",
     "\n",
     "import requests\n",
+    "import numpy as np\n",
     "\n",
     "def get_uniprot_sequence(uniprot_id):\n",
     "    url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
@@ -300,8 +301,7 @@
     "        else:\n",
     "            print(\"Błędna opcja\")\n",
     "\n",
-    "start()\n",
-    "\n"
+    "start()"
    ],
    "metadata": {
     "collapsed": false,
@@ -316,16 +316,128 @@
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Sequence:\n",
+    "    def __init__(self, seq):\n",
+    "        self.sequence = seq\n",
+    "        self.length = len(seq)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return self.sequence\n",
+    "    \n",
+    "    def get_length(self):\n",
+    "        return self.length\n",
+    "    \n",
+    "    def dotplot(self, seq2):\n",
+    "        dp = np.zeros((self.length, seq2.get_length()))\n",
+    "        for i in range(self.length):\n",
+    "            for j in range(seq2.get_length()):\n",
+    "                if self.sequence[i] == seq2.sequence[j]:\n",
+    "                    dp[i,j] = 1\n",
+    "                else:\n",
+    "                    dp[i,j] = 0\n",
+    "        return dp\n"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-14T18:00:03.455686Z",
-     "start_time": "2024-03-14T18:00:03.453250Z"
+     "end_time": "2024-03-14T18:31:01.726913Z",
+     "start_time": "2024-03-14T18:31:01.719913Z"
     }
    },
    "id": "e14db752cb3fbc8e",
-   "execution_count": 8
+   "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wybierz pierwszą sekwencję:\n",
+      "Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\n",
+      "Podaj nazwę pliku\n",
+      "Wybierz drugą sekwencję:\n",
+      "Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\n",
+      "Podaj nazwę pliku\n",
+      "[[1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 1.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 1. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import numpy as np\n",
+    "\n",
+    "def get_uniprot_sequence(uniprot_id):\n",
+    "    url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Sprawdź, czy odpowiedź nie zawiera błędu HTTP\n",
+    "        fasta_data = response.text\n",
+    "        lines = fasta_data.split('\\n')\n",
+    "        seq = ''.join(lines[1:])  # Pobierz sekwencję z linii 2 i dalej (pomiń nagłówek)\n",
+    "        return seq\n",
+    "    except requests.exceptions.HTTPError as e:\n",
+    "        print(f\"Wystąpił błąd HTTP: {e}\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Wystąpił inny błąd: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def start():\n",
+    "    while True:\n",
+    "        print(\"Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\")\n",
+    "        choice = input()\n",
+    "        if choice == \"1\":\n",
+    "            print(\"Podaj nazwę pliku\")\n",
+    "            name = input()\n",
+    "            seq = \"\"  # Inicjalizacja zmiennej seq\n",
+    "            try:\n",
+    "                with open(name, \"r\") as f:  # Użyj 'with' do otwarcia pliku, aby uniknąć zapominania o zamknięciu pliku\n",
+    "                    read = f.read()\n",
+    "                    read = read.split(\"\\n\")\n",
+    "                    for i in read:\n",
+    "                        if \">\" not in i:\n",
+    "                            seq += i\n",
+    "            except IOError as e:\n",
+    "                print(\"Wystąpił wyjątek:\", e)\n",
+    "            return seq\n",
+    "        elif choice == \"2\":\n",
+    "            print(\"Podaj ID Uniprot\")\n",
+    "            uniprot_id = input()\n",
+    "            seq = get_uniprot_sequence(uniprot_id)\n",
+    "            if seq:\n",
+    "                return seq\n",
+    "            else:\n",
+    "                print(\"Nie udało się pobrać sekwencji dla podanego ID Uniprot.\")\n",
+    "        else:\n",
+    "            print(\"Błędna opcja\")\n",
+    "\n",
+    "print(\"Wybierz pierwszą sekwencję:\")\n",
+    "seq1 = Sequence(start())\n",
+    "print(\"Wybierz drugą sekwencję:\")\n",
+    "seq2 = Sequence(start())\n",
+    "dp = seq1.dotplot(seq2)\n",
+    "print(dp)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T18:32:03.303535Z",
+     "start_time": "2024-03-14T18:31:49.991059Z"
+    }
+   },
+   "id": "ae9dd1e62174395",
+   "execution_count": 17
   },
   {
    "cell_type": "code",
@@ -334,7 +446,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "ae9dd1e62174395"
+   "id": "243ca62e561edca1"
   }
  ],
  "metadata": {
