--- a/lista1.ipynb
+++ b/lista1.ipynb
@@ -427,17 +427,78 @@
     "print(\"Wybierz drugą sekwencję:\")\n",
     "seq2 = Sequence(start())\n",
     "dp = seq1.dotplot(seq2)\n",
-    "print(dp)"
+    "print(dp)\n",
+    "np.savetxt(\"dotplot.txt\", dp, fmt=\"%d\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-14T18:32:03.303535Z",
-     "start_time": "2024-03-14T18:31:49.991059Z"
+     "end_time": "2024-03-14T18:37:57.652890Z",
+     "start_time": "2024-03-14T18:37:44.009288Z"
     }
    },
    "id": "ae9dd1e62174395",
-   "execution_count": 17
+   "execution_count": 18
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "numpy.ndarray"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(dp)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T18:42:23.415016Z",
+     "start_time": "2024-03-14T18:42:23.408711Z"
+    }
+   },
+   "id": "243ca62e561edca1",
+   "execution_count": 21
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Dotplot:\n",
+    "    def __init__(self, array):\n",
+    "        self.array = array\n",
+    "        self.size = len(array)\n",
+    "        \n",
+    "    def __getitem__(self, index):\n",
+    "        n, m = index\n",
+    "        return self.array[n][m]\n",
+    "    \n",
+    "    def __setitem__(self, index, val):\n",
+    "        n, m = index\n",
+    "        self.array[n][m] = val\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return str(self.array)\n",
+    "    \n",
+    "    def saveTxt(self, filename):\n",
+    "        np.savetxt(filename, self.array, fmt=\"%d\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T18:48:51.891187Z",
+     "start_time": "2024-03-14T18:48:51.885986Z"
+    }
+   },
+   "id": "47f0bc76fe8e5ea7",
+   "execution_count": 22
   },
   {
    "cell_type": "code",
@@ -446,7 +507,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "243ca62e561edca1"
+   "id": "7458a8fc8c957d28"
   }
  ],
  "metadata": {
