--- a/lista1.ipynb
+++ b/lista1.ipynb
@@ -25,6 +25,8 @@
    ],
    "source": [
     "from Bio import SeqIO\n",
+    "from Bio.Seq import Seq\n",
+    "from Bio.SeqRecord import SeqRecord\n",
     "\n",
     "with open(\"P02089.fasta\") as file:\n",
     "    for record in SeqIO.parse(file, \"fasta\"):\n",
@@ -116,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "3835c988808c8617",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-08T09:18:20.495247Z",
-     "start_time": "2024-03-08T09:18:20.480499Z"
-    },
-    "collapsed": false
+     "end_time": "2024-03-14T18:57:32.663130Z",
+     "start_time": "2024-03-14T18:57:32.656644Z"
+    }
    },
    "outputs": [
     {
@@ -148,13 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8b1bc9f18d465831",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T18:57:37.490711Z",
+     "start_time": "2024-03-14T18:57:37.485213Z"
+    }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "list"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(read)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -320,9 +337,11 @@
     "import numpy as np\n",
     "\n",
     "class Sequence:\n",
-    "    def __init__(self, seq):\n",
+    "    def __init__(self, seq, name=\"default\", id=000000):\n",
     "        self.sequence = seq\n",
     "        self.length = len(seq)\n",
+    "        self.name = name\n",
+    "        self.id = id\n",
     "        \n",
     "    def __str__(self):\n",
     "        return self.sequence\n",
@@ -343,12 +362,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-14T18:31:01.726913Z",
-     "start_time": "2024-03-14T18:31:01.719913Z"
+     "end_time": "2024-03-14T19:15:48.433100Z",
+     "start_time": "2024-03-14T19:15:48.426763Z"
     }
    },
    "id": "e14db752cb3fbc8e",
-   "execution_count": 16
+   "execution_count": 27
   },
   {
    "cell_type": "code",
@@ -502,12 +521,118 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wybierz pierwszą sekwencję:\n",
+      "Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\n",
+      "Podaj nazwę pliku\n",
+      "Wybierz drugą sekwencję:\n",
+      "Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\n",
+      "Podaj ID Uniprot\n",
+      "[[1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 1.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 1. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import numpy as np\n",
+    "import re\n",
+    "\n",
+    "def seqConstructor(fasta_data):\n",
+    "    lines = fasta_data.split('\\n')\n",
+    "    seq = ''.join(lines[1:]) \n",
+    "    match = re.match(r\">sp\\|(\\w+)\\|(\\w+)OS\", lines[0])\n",
+    "    id = None\n",
+    "    name = None\n",
+    "    if match:\n",
+    "        id = match.group(1)\n",
+    "        name = match.group(2)\n",
+    "    protein = Sequence(seq, id=id, name=name)\n",
+    "    return protein\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_uniprot_sequence(uniprot_id):\n",
+    "    url = f\"https://www.uniprot.org/uniprot/{uniprot_id}.fasta\"\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Sprawdź, czy odpowiedź nie zawiera błędu HTTP\n",
+    "        fasta_data = response.text\n",
+    "        seq = seqConstructor(fasta_data)\n",
+    "        return seq\n",
+    "    except requests.exceptions.HTTPError as e:\n",
+    "        print(f\"Wystąpił błąd HTTP: {e}\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"Wystąpił inny błąd: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def start():\n",
+    "    while True:\n",
+    "        print(\"Wybierz metodę wprowadzania sekwencji: plik FASTA(1) lub ID Uniprot(2)\")\n",
+    "        choice = input()\n",
+    "        if choice == \"1\":\n",
+    "            print(\"Podaj nazwę pliku\")\n",
+    "            name = input()\n",
+    "            seq = \"\"  # Inicjalizacja zmiennej seq\n",
+    "            try:\n",
+    "                with open(name, \"r\") as f:  # Użyj 'with' do otwarcia pliku, aby uniknąć zapominania o zamknięciu pliku\n",
+    "                    read = f.read()\n",
+    "                    seq = seqConstructor(read)\n",
+    "            except IOError as e:\n",
+    "                print(\"Wystąpił wyjątek:\", e)\n",
+    "            return seq\n",
+    "        elif choice == \"2\":\n",
+    "            print(\"Podaj ID Uniprot\")\n",
+    "            uniprot_id = input()\n",
+    "            seq = get_uniprot_sequence(uniprot_id)\n",
+    "            if seq:\n",
+    "                return seq\n",
+    "            else:\n",
+    "                print(\"Nie udało się pobrać sekwencji dla podanego ID Uniprot.\")\n",
+    "        else:\n",
+    "            print(\"Błędna opcja\")\n",
+    "\n",
+    "print(\"Wybierz pierwszą sekwencję:\")\n",
+    "seq1 = Sequence(start())\n",
+    "print(\"Wybierz drugą sekwencję:\")\n",
+    "seq2 = Sequence(start())\n",
+    "dp = Dotplot(seq1.dotplot(seq2))\n",
+    "\n",
+    "print(dp)\n",
+    "dp.saveTxt(\"dotplot.txt\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-14T18:51:19.980712Z",
+     "start_time": "2024-03-14T18:50:54.661322Z"
+    }
+   },
+   "id": "7458a8fc8c957d28",
+   "execution_count": 23
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "7458a8fc8c957d28"
+   "id": "d49bb6fb6c6a11f8"
   }
  ],
  "metadata": {
