--- a/lista1.ipynb
+++ b/lista1.ipynb
@@ -549,15 +549,31 @@
     "\n",
     "def seqConstructor(fasta_data):\n",
     "    lines = fasta_data.split('\\n')\n",
-    "    seq = ''.join(lines[1:]) \n",
+    "\n",
+    "    # Sprawdź, czy sekwencja zawiera nagłówek\n",
+    "    if not lines[0].startswith('>'):\n",
+    "        print(\"Błąd: Brak nagłówka w sekwencji FASTA.\")\n",
+    "        return None\n",
+    "\n",
+    "    seq = ''.join(lines[1:])\n",
+    "\n",
+    "    # Sprawdź, czy sekwencja zawiera nielegalne znaki\n",
+    "    basic_amino_acids = {'A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P', 'Q', 'R', 'S', 'T', 'V', 'W', 'Y'}\n",
+    "\n",
+    "    if not set(seq).issubset(basic_amino_acids):\n",
+    "        print(\"Błąd: Sekwencja zawiera nielegalne znaki.\")\n",
+    "        return None\n",
+    "\n",
     "    match = re.match(r\">sp\\|(\\w+)\\|(\\w+)OS\", lines[0])\n",
     "    id = None\n",
     "    name = None\n",
     "    if match:\n",
     "        id = match.group(1)\n",
     "        name = match.group(2)\n",
+    "    \n",
     "    protein = Sequence(seq, id=id, name=name)\n",
     "    return protein\n",
+    "\n",
     "\n",
     "\n",
     "\n",
